# hcr-cw

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: greetings.yml
cad/: GO2_Mount_v6.stl  Go_mount_v6.3mf
communications/teleop_communication/: README.md
communications/teleop_communication/go2/: Dockerfile.dog_websocket_client  docker-compose.yaml  joystick_controller_node.py  lidarFakeData.py  lidar_packer.py  websocket_node.py
communications/teleop_communication/simulation/: Dockerfile
communications/teleop_communication/virtuix/: virtuix_unity.cs
communications/teleop_comunication/: README.md
communications/teleop_comunication/go2/: Dockerfile.dog_websocket_client  docker-compose.yaml  go2_ws_copy.py  go2_ws_node.py  go2_ws_nodev2.py  lidarFakeData.py  rotation_controller.py  virtuix_controller_node.py  websocket_node.py
communications/teleop_comunication/server/: relay_server.py
communications/teleop_comunication/simulation/: README.md
communications/teleop_comunication/virtuix/: virtuix_sim.csx  virtuix_sim.py
communications/video_streaming/: README.md  receiver.py  requirements.txt  transmitter.py
communications/video_streaming/coturn/: turnserver.conf
communications/video_streaming/receiver/: SRTReceiver.cs  receiver.py
communications/video_streaming/relay/: relay.sh
communications/video_streaming/signalling/: signalling_server.py
communications/video_streaming/transmitter/: computer_vision.py  config.py  transmitter.py  webrtc_transmitter.py
test/bitpacking-demo/: docker-compose.yaml
test/bitpacking-demo/csharp/: Dockerfile  receiver.cs
test/bitpacking-demo/python/: Dockerfile  fake_data.py  lidar_packer.py  sender.py
test_data/: HRI questionnaire answers.xlsx  NASA Task Load Index (TLX) answers.xlsx  README.md  Time.xlsx  VRI answers.xlsx
tmux/: README.md  bernie_start.sh
tmux/scripts/: script2.sh  script3.sh  script4.sh  start_joystick_controller.sh  start_video_transmitter.sh  start_virtuix_controller.sh  start_websocket_node.sh
unitree_go2/: .main.env  Dockerfile  LidarListener.py  Makefile  README.md  dog-interface.cpp  entrypoint.sh  test.txt
unitree_go2/dockerfiles/: Dockerfile.dog  Dockerfile.dog.lidar_processor  Dockerfile.dog.sdk
unitree_go2/dog_interface/: CMakeLists.txt  package.xml
unitree_go2/dog_interface/src/: dog-crouch.cpp  dog-interface.cpp  dog-sit.cpp  dog-stand.cpp
unitree_go2/lidar/: LidarListener.py  README.md  requirements.txt
virtuix/: .gitignore  README.md  unityProject.vrmanifest
virtuix/Assets/: 360_material.mat  CustomUnlitShader.shader  LookAround.cs  PanoramicSkyboxMat.mat  RT_360_video.renderTexture  VideoManager.cs  packages.config  video.unity
virtuix/Assets/Scenes/: Teleop.unity  (+6 more)
virtuix/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
virtuix/Simulation/: README.md  visualiseVirtuix.py
(+76 files in other folders)
